# ChangeLog for app-emulation/wine
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.524 2014/12/16 15:06:28 pacho Exp $

  04 Feb 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.33-r1.ebuild:
  Update 1.7.33's dependencies to the new dependencies

  26 Jan 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.33-r1.ebuild:
  Update perl USE flag handling

*wine-1.7.35 (24 Jan 2015)

  24 Jan 2015; NP-Hardass <np.hardass@gmail.com> +wine-1.7.35.ebuild:
  Version bump to 1.7.35

  21 Jan 2015; NP-Hardass <np.hardass@gmail.com> wine-1.7.34.ebuild,
  wine-9999.ebuild, metadata.xml:
  Minor QA fixes

  21 Jan 2015; NP-Hardass <np.hardass@gmail.com> -wine-1.7.33.ebuild,
  +wine-1.7.33-r1.ebuild, +wine-1.7.34.ebuild, +wine-9999.ebuild,
  +files/wine-staging-gentoo-epatch-support.patch, metadata.xml:
  Import wine ebuilds from np-hardass-overlay

*wine-1.7.34-r2 (19 Jan 2015)

  19 Jan 2015; NP-Hardass <np.hardass@gmail.com> -wine-1.7.34-r1.ebuild,
  +wine-1.7.34-r2.ebuild:
  Update 1.7.34 to use new deps used in wine-9999-r1

*wine-1.7.34-r1 (19 Jan 2015)

  19 Jan 2015; NP-Hardass <np.hardass@gmail.com> -wine-1.7.34.ebuild, +wine-1.7.34-r1.ebuild,
  files/wine-staging-gentoo-epatch-support.patch:
  Update staging patch for 1.7.34

  16 Jan 2015; NP-Hardass <np.hardass@gmail.com> wine-9999-r1.ebuild:
  Minor tweaks to comments and perl use flags

*wine-9999-r1 (16 Jan 2015)

  16 Jan 2015; NP-Hardass <np.hardass@gmail.com> +wine-9999-r1.ebuild:
  Slim dependencies and use ${MULTILIB_USEDEP} for managing multilib
  dependencies

  14 Jan 2015; NP-Hardass <np.hardass@gmail.com> wine-9999.ebuild:
  use new wine-staging option --no-autoconf so that autoconf and
  tools/make_requests aren't called twice.

*wine-1.7.34 (12 Jan 2015)
*wine-1.7.33-r5 (12 Jan 2015)

  12 Jan 2015; NP-Hardass <np.hardass@gmail.com> -wine-1.7.33.ebuild, -wine-1.7.33-r1.ebuild,