@@ -1,6 +1,7 @@
 DIST wine-1.7.33.tar.bz2 21908969 SHA256 e3519d6fa2c0bb91e58da38f14f02607cf366a0154ff1effe528966106d49275 SHA512 a9bb47383b88e9c60edef7883c3ce25f5ad0895b67cdb4393c1c3f9b9ab7245e8d8318df193722a7b8c87ff57cd554df53a24c988566d1dce808b939ed731451 WHIRLPOOL 3747cc9df638e7cba5aaff8cb6bfa26e5588ba87e5bdc9d5e3202f30973bc2c06b0d65027f113066dce82d851c1591ce86421ce6e7d90944f5206d341f7ed51d
 DIST wine-1.7.34.tar.bz2 21956792 SHA256 4d5a3b25450fb232aa9d0d0dd859b7d50b8ffb6180f24aefb6eb4e400d32330b SHA512 55d8c42ecd146fb92c1d91737e9c6e51d6cc36682964bfc8ef73a4495edf884d84fddca173d297b7553823abbddaf4dbc115a5474419be0611f2723beab00b6c WHIRLPOOL 8842bc71632b04a736e51eb3a016395a5a72b1798d43d1a3343956854d4fa1d9b973498abca0a28717ae5c2fd947970066820d5606dfdedb67e3235ded3de2ce
 DIST wine-1.7.35.tar.bz2 22005666 SHA256 eb2ef652a302c366d3f6ee9315790f162b1c0913d442cb5a856d9f7d95e31cfb SHA512 52d8947b1cedeead1e9bc559aa234fcb2237db493bc0556a6832968bde495c70d6eb2e4ee81d698e6525982d5373d6421b072af97a6d6b05b05e28b4bf71c9b6 WHIRLPOOL 99f3d2c03c1c1a98913a1925105102ec3f4f8f408168c3c812077feb5e87fbef7f9ac4e672b43ebaa19fe3dd41bd9c376f3b97a152bc7d3924e70f3349d7fa61
+DIST wine-desktop-common-20150204.tar.gz 99491 SHA256 444ad6b52b5290ec7d160e2cc40e4ba0910b4c4983dba1ceb054b81b09b24b5e SHA512 1f3d7022c5cff87ed3b8fd3b7cd14397c6f23b98fe6a7c583ac0d2f439ff29d943f57375f23687aa6519ff1d84ff07624a9a712d6f19fa207fd26d01edcb6688 WHIRLPOOL e9810b2952d25c05d831000e00e423de86809ec31b9a033fd4c64a70709da7338a9afc9e632e678f49c789a8a3702fbd0113226770cdb806623f2de371a16f54
 DIST wine-gentoo-2013.06.24.tar.bz2 85442 SHA256 bfbf6b25e98f717320de2ede467e3628fbc749d936b8449f8477c9dc6f41e04b SHA512 b6819889314f6a6ea16c1332f4b177c43623116763969c31b23b61754cd304dd085f5d3eafbe847159331eb97dddd9b4c10699430129ea4a71da418c1fe175f0 WHIRLPOOL 227e0ac6569736d4ad5813cef49f775dae956f4fc9255de95753d5d3cba1bf6cf3db31d23d3702bb54d2e60c5a6f779b602f0efb2096e4c827c924565b273d00
 DIST wine-mono-4.5.4.msi 53706752 SHA256 20bced7fee01f25279edf07670c5033d25c2c9834a839e7a20410ce1c611d6f2 SHA512 307fab2ac50c4eaa5c3fb8446ceb2df0d95c0a9d7c1e6289ef1ec5cc660fa8fcb26025c9723ce2bc01afcaf7e9c4dd9939d1beba877f4f95f6f80d92d8187221 WHIRLPOOL ccd1fed03158dd309d2a1f88558e5ad0e2e43de5ba61ab82702132bd0cdf75db75dcc1a61b5cb2775fdf0ad51464f34d2b3629538b1737cbedb410b859ef092a
 DIST wine-staging-1.7.33.tar.gz 8759402 SHA256 30b7ecee549514ecd186689ae8eac15ed37507755025c8272d31e8fd4808b3f2 SHA512 b3b939c8d5af419a9305a16de93486f75197d28bc39be4ca0abdea3e194745bfb401ecf6e092f93c59f68255aa7f051ee847ad3c8521ce87ecbf91abccc900f6 WHIRLPOOL 657bc4d642e1c799c6e0b39ef627c8f6852ab8d511e86f96c54065d87fb144d25a97b1a2572e87a029084d568fda7bbdab7c2ba5255dc07f02691f46e9796960
